# mini-htop

./: Cargo.toml  README.md
src/: backend.rs  main.rs  system_info.rs  ui.rs  utils.rs
src/core/: mod.rs  system_info.rs
statics/: index.html  index.js  style.css
