[package]
name = "mini-htop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.19"
futures-util = "0.3.28"
sysinfo = "0.29.7"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.3", features = ["fs"] }
